src/test/deca/context/valid/class/casting_with_null_object.deca
/// Description:
// 	  casting with null type
// 	
//  Resultats:
//    ok
// Historique:
// 	  cree le 17/01/2023
class A {
    void f() {}
}
class B extends A {

    protected int x;
    void g() {
        this.x = 3;
    }
}

{
    B obj1 = new B();
    A obj2 = new A();
    obj2 = (A) (null);
}