src/test/deca/context/invalid/class/use_field_which_not_exit.deca
// Description:
// 	  use undeclared field 
//
// Resultats:
// 	UNDEFINED_FIELD: Field with name undefined_field doesn't exist
//  line 20
// Historique:
// 	  cree le 15/01/2023

class B {
    
    protected float x;

    int methodB() {
        return 2;
    }
}
{
    B objectB = new B();
    objectB.undefined_field = true;
}
